Tweak delivery banner messaging and layout

--- a/client/styles.css
+++ b/client/styles.css
@@ -9,6 +9,7 @@
   --safe-area-right: env(safe-area-inset-right, 0px);
   --safe-area-bottom: env(safe-area-inset-bottom, 0px);
   --safe-area-left: env(safe-area-inset-left, 0px);
+  --topbar-height: 72px;
 }
 
 html, body {
@@ -2024,7 +2025,7 @@ body.page-route-finder #map::after {
 
 .delivery-banner {
   position: fixed;
-  top: 56px;
+  top: calc(var(--topbar-height, 56px) + 16px);
   left: 0;
   right: 0;
   padding: 14px 24px;
